--- a/css/style.css
+++ b/css/style.css
@@ -486,6 +486,7 @@ body {
 }
 .about__text {
   flex: 0 1 50%;
+  font-weight: 300;
   line-height: 1.3;
   display: flex;
   flex-direction: column;
@@ -554,7 +555,6 @@ body {
 .information-about {
   display: flex;
   flex-direction: column;
-  gap: 1.5625rem;
 }
 @media (min-width: 75em) {
   .information-about {
@@ -802,9 +802,6 @@ body {
   transform: scale(1) rotate(0deg);
   opacity: 1;
 }
-.about-canvas:hover {
-  transform: scale(0.8);
-}
 
 .portfolio {
   background-color: #1d1d1d;
@@ -1008,6 +1005,11 @@ body {
   justify-content: center;
   flex-direction: column;
 }
+@media (max-width: 61.99875em) {
+  .contacts__info {
+    order: 2;
+  }
+}
 .contacts__sphere {
   width: 100%;
   display: flex;
@@ -1142,6 +1144,12 @@ body {
   content: "";
   height: 0;
   width: 0;
+}
+@media (max-width: 29.99875em) {
+  .form-contacts__item-submit {
+    max-width: none !important;
+    width: 100%;
+  }
 }
 .form-contacts__item-submit > input {
   outline: none;
